Fix navbar toggle on small width
Add our own handler for collapse toggle since bootstrap toggle seems to
conflict with something
add btn-bavbar and set appropriate display attrs for smaller width in
responsive css file

--- a/src/rockstor/storageadmin/static/storageadmin/css/bootstrap-responsive.css
+++ b/src/rockstor/storageadmin/static/storageadmin/css/bootstrap-responsive.css
@@ -473,10 +473,10 @@
     padding-left: 10px;
     padding-right: 10px;
   }
-  .btn-navbar {
+  .btn-navbar, .navbar .btn-navbar {
     display: block;
   }
-  .nav-collapse {
+  .nav-collapse, .nav-collapse.collapse {
     overflow: hidden;
     height: 0;
   }
